Updated the paths

--- a/Logistic Regression/Logistic Regression.ipynb
+++ b/Logistic Regression/Logistic Regression.ipynb
@@ -332,8 +332,8 @@
    ],
    "source": [
     "# File paths\n",
-    "path_train: str = './data/fashion-mnist_train.csv'\n",
-    "path_test: str = './data/fashion-mnist_test.csv'\n",
+    "path_train: str = '../data/fashion-mnist_train.csv'\n",
+    "path_test: str = '../data/fashion-mnist_test.csv'\n",
     "\n",
     "# Reading the data using Pandas DataFrame\n",
     "train_data: pd.DataFrame = pd.read_csv(path_train)\n",
